[homewizard] Add current, voltage and failure channels (#16995)
Signed-off-by: Leo Siepel <leosiepel@gmail.com>